# balance_car

./: .gitignore
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.fish  local_setup.sh  local_setup.zsh  setup.bash  setup.fish  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py  local_setup.fish  local_setup.sh  setup.fish
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/simble_box_bot/: .catkin  local_setup.fish  local_setup.sh  setup.sh
devel/.private/simble_box_bot/include/simble_box_bot/: BalanceParamConfig.h
devel/.private/simble_box_bot/lib/pkgconfig/: simble_box_bot.pc
devel/include/simble_box_bot/: BalanceParamConfig.h
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  simble_box_bot.pc
devel/lib/python3/dist-packages/simble_box_bot/: __init__.py
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/simble_box_bot/cmake/: simble_box_botConfig-version.cmake  simble_box_botConfig.cmake
devel/share/simble_box_bot/docs/: BalanceParamConfig-usage.dox  BalanceParamConfig.dox  BalanceParamConfig.wikidoc
src/simble_box_bot/: CMakeLists.txt  balance_plugins.xml
src/simble_box_bot/calculate_lqr/: lar.py  lqr.py
src/simble_box_bot/cfg/: BalanceParam.cfg
src/simble_box_bot/config/: controllers.yaml
src/simble_box_bot/include/simble_box_bot/: balance_controller.h  lqr_controller.h
src/simble_box_bot/launch/: test_run.launch
src/simble_box_bot/src/: balance_controller.cpp  lqr_controller.cpp
src/simble_box_bot/urdf/: balance_bot.xacro
(+8 files in other folders)
